# Orchester

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/workflows/: npm-release.yml
kisten/adapter/: Cargo.toml
kisten/adapter/src/: lib.rs  mock.rs
kisten/konsole/: Cargo.toml
kisten/konsole/assets/: logo.ansi
kisten/konsole/src/: args.rs  avatar.rs  interactive.rs  main.rs  plugin.rs  process.rs  render.rs  self_agent.rs
kisten/konsole/src/interactive/: commands.rs  screen.rs
kisten/konsole/src/plugin/: install.rs  remove.rs
kisten/konsole/src/plugin/install/: archive.rs  receipt.rs  store.rs
kisten/konsole/src/process/: windows.rs
kisten/konsole/src/self_agent/: render.rs
kisten/konsole/tests/: cli.rs  plugin_cli.rs  plugin_mutation_cli.rs  plugin_remove_cli.rs
kisten/konsole/tests/support/: mod.rs  plugin_fixture.rs
kisten/laufzeit/: Cargo.toml
kisten/laufzeit/migrations/: 0001_memory.sql  0001_state.sql  0002_approval_barrier.sql  0002_memory_access.sql  0003_memory_provenance.sql  0003_model_phase.sql  0004_action_model_binding.sql  0004_memory_schema_namespace.sql  0005_observation_links.sql  0006_transcript_records.sql  0007_transcript_bindings.sql  0008_transcript_append_guards.sql
kisten/laufzeit/src/: conductor.rs  lib.rs  session.rs  store.rs
kisten/laufzeit/src/harness/: agent_loop.rs  approval.rs  audit.rs  barrier.rs  config.rs  context.rs  coordinator.rs  credentials.rs  executor.rs  executor_tests.rs  feedback.rs  files.rs  memory.rs  mod.rs  mutation.rs  process.rs  process_runtime.rs  process_runtime_tests.rs  process_tree.rs  run_store.rs  secret_scan.rs  tools.rs  transcript.rs  validator.rs  workspace_patch.rs  workspace_patch_tests.rs  workspace_write.rs  workspace_write_tests.rs
kisten/laufzeit/src/harness/audit/: record.rs
kisten/laufzeit/src/harness/config/: protected_file.rs  provider.rs  secrets.rs
kisten/laufzeit/src/harness/config/protected_file/: unix.rs  windows.rs
kisten/laufzeit/src/harness/coordinator/: continuation.rs
kisten/laufzeit/src/harness/evolution/: candidate.rs  error.rs  evaluation.rs  identity.rs  mod.rs  snapshots.rs  validation.rs
kisten/laufzeit/src/harness/execution/: mod.rs  observation.rs
kisten/laufzeit/src/harness/governance/: command.rs  mod.rs  path_guard.rs  policy.rs  workspace_lock.rs
kisten/laufzeit/src/harness/private_fs/: mod.rs  unix.rs  windows.rs
kisten/laufzeit/src/harness/provider/: http.rs  mod.rs
kisten/laufzeit/src/harness/provider/http/: client.rs
kisten/laufzeit/src/harness/provider/responses/: factory.rs  json.rs  mod.rs  model.rs  request.rs  response.rs
kisten/laufzeit/src/harness/run_store/: database.rs  model.rs  observation.rs  policy.rs  resume.rs  sanitized.rs  schema.rs  storage.rs  transcript.rs  transition.rs  types.rs
kisten/laufzeit/src/harness/run_store/resume/: evidence.rs
kisten/laufzeit/src/harness/run_store/schema/: validation.rs
kisten/laufzeit/src/harness/run_store/schema/validation/: bindings.rs  transcript.rs
kisten/laufzeit/src/harness/run_store/transcript/: binding.rs
kisten/laufzeit/src/harness/service/: builder.rs  identity.rs  mod.rs  runtime.rs  turn.rs
kisten/laufzeit/tests/: agent_loop.rs  audit_approval.rs  config_security.rs  configured_secret_set.rs  context_assembler.rs  coordinator.rs  durable_approval_barrier.rs  durable_observations.rs  evolution_identity.rs  evolution_validation.rs  evolution_wire.rs  feedback_loop.rs  file_tools.rs  governed_execution.rs  memory_store.rs  model_http_boundary.rs  model_http_reqwest.rs  path_guard.rs  policy_matrix.rs  responses_factory.rs  responses_model.rs  responses_request.rs  responses_response.rs  run_store.rs  run_store_action_events.rs  run_store_bindings.rs  run_store_migrations.rs  run_store_policy.rs  run_store_resume.rs  self_agent_builder.rs  self_agent_runtime.rs  self_agent_service.rs  tool_registry.rs
kisten/laufzeit/tests/evolution_support/: mod.rs
kisten/laufzeit/tests/support/: allowed_run.rs
kisten/modell/: Cargo.toml
kisten/modell/src/: decoder.rs  lib.rs  scripted.rs  types.rs
kisten/modell/tests/: scripted_loop_parts.rs
kisten/protokoll/: Cargo.toml
kisten/protokoll/src/: capability.rs  event.rs  harness.rs  lib.rs  result.rs  session.rs  task.rs
kisten/protokoll/tests/: harness_roundtrip.rs  roundtrip.rs
kisten/vertrag/: Cargo.toml
kisten/vertrag/src/: adapter.rs  error.rs  extract.rs  lib.rs  manifest.rs  manifest_adapter.rs
kisten/verzeichnis/: Cargo.toml
kisten/verzeichnis/src/: lib.rs
kisten/verzeichnis/src/plugin/: descriptor.rs  discovery.rs  mod.rs  package.rs
kisten/verzeichnis/tests/: plugin_discovery.rs  plugin_package.rs
manifeste/: claude.toml  codex.toml  opencode.toml
npm/cli/: package.json  targets.json
npm/cli/lib/: process.cjs  target.cjs
npm/cli/test/: process.test.cjs  target.test.cjs
npm/plugins/claude/: orchester-plugin.json  package.json
npm/plugins/claude/manifests/: claude.toml
npm/plugins/codex/: orchester-plugin.json  package.json
npm/plugins/codex/manifests/: codex.toml
npm/plugins/opencode/: orchester-plugin.json  package.json
npm/plugins/opencode/manifests/: opencode.toml
sample/logo/: logo.txt
werkzeug/: env.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
werkzeug/logo/: normalize.mjs  normalize.test.mjs
werkzeug/npm/: binary.mjs  binary.test.mjs  install.mjs  install.test.mjs  plugin-release.mjs  plugin-release.test.mjs  plugin.mjs  plugin.test.mjs  release-workflow.test.mjs  stage.mjs  stage.test.mjs  verify.mjs  verify.test.mjs
werkzeug/npm/install/: command.mjs  environment.mjs  fixture.mjs  plans.mjs  smoke.mjs
werkzeug/tests/: install_bootstrap_test.sh  install_shim_test.ps1  install_shim_wrapper_test.sh  uninstall_test.ps1  uninstall_test.sh
