[workspace]
resolver = "2"
members = [
    "kisten/protokoll",
    "kisten/modell",
    "kisten/vertrag",
    "kisten/adapter",
    "kisten/verzeichnis",
    "kisten/laufzeit",
    "kisten/konsole",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orchester/orchester"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates (German role names; see handbuch/ARCHITEKTUR.md)
orchester-protokoll = { path = "kisten/protokoll" }
orchester-modell = { path = "kisten/modell" }
orchester-vertrag = { path = "kisten/vertrag" }
orchester-adapter = { path = "kisten/adapter" }
orchester-verzeichnis = { path = "kisten/verzeichnis" }
orchester-laufzeit = { path = "kisten/laufzeit" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
secrecy = "0.10"
keyring = { version = "3.6", default-features = false }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
crossterm = "0.29"
unicode-width = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
getrandom = "0.3"
fs2 = "0.4"
blake3 = "1"
regex = "1"
