[package]
name = "orchester-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orchester-protokoll = { workspace = true }
orchester-vertrag = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
