[package]
name = "orchester-konsole"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "orchester"
path = "src/main.rs"

[dependencies]
orchester-protokoll = { workspace = true }
orchester-vertrag = { workspace = true }
orchester-verzeichnis = { workspace = true }
orchester-laufzeit = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
