[package]
name = "orchester-laufzeit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orchester-protokoll = { workspace = true }
orchester-modell = { workspace = true }
orchester-vertrag = { workspace = true }
orchester-verzeichnis = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
secrecy = { workspace = true }
keyring = { workspace = true }
cap-std = { workspace = true }
cap-fs-ext = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
fs2 = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }
windows-sys = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }
