[package]
name = "orchester-verzeichnis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orchester-protokoll = { workspace = true }
orchester-vertrag = { workspace = true }
orchester-adapter = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
